Revision history for Perl extension IPC::Shareable.

1.06 UNREL
    - Fix significant bug where at least on MacOS, if we generated a CRC of a
      key that was greater than 0x80000000, it would round down the key to that
      number exactly, casuing duplicates, and incorrect segment access
    - Added new() method, returns a reference (default hash) without having to
      do the tie() directly
    -

1.05    2021-07-16
    - Bump prereq version of Test::SharedFork to 0.35
    - Added ability to use JSON as the serializer
    - Added ipcs()
    - Added test to ensure we croak if data size is greater than segment size
    - Added 'tidy' attribute, removes unneeded nested structure segments
    - In SharedMem, added _key attribute, and added set/get methods
    - Changed key generation from using padding, pack and unpack to using
      String::CRC32's crc32(), which allows arbitrary, unpadded strings
    - Added attributes() allows fetching one, or all of the object's atttributes
    - Added 'limit' attribute, by setting false, allows a user to set a segment
      size larger than our internal 1GB default
    - Cleaned up exception throwing (particularly if seg size eats up all
      memory, we throw an appropriate message)
    - Display proper exception if we try to exhaust all available shared memory
      segments (fixes #3)

1.04    2021-06-28
    - Skip unspawn tests for perls with -Duselongdouble, as Storable is not
      compatible storing/retrieving such numbers (closes #5)

1.03    2021-06-25
    - Add newline to singleton() warn so that it doesn't print out trace info

1.02    2021-06-25
    - Remove erroneous listing from MANIFEST
    - Work around issue in t/65-seg_size.t where MacOS and FreeBSD don't have
      the -i flag to ipcs (thanks for the PR, Roland Walker!)
    - Added singleton(), ensures that only a single instance of a script can
      run at any given time
    - Added tests to ensure we croak() if create is not set and the segment